# sway.module_gui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/doxygen/: doxyfile.doxy
include/sway/: gui.hpp  ui.h
include/sway/gui/: builder.hpp  painter.hpp  prereqs.hpp
include/sway/ui/: builder.h  painter.h  prereqs.h
lib/cxx/: CMakeLists.txt
lib/cxx/include/sway/: ui.hpp
lib/cxx/include/sway/ui/: _stdafx.hpp  _typedefs.hpp  barriertypes.hpp  builder.hpp  cursor.hpp  json.hpp  orientable.hpp  orientations.hpp  painter.hpp  types.hpp  typography.hpp  zindex.hpp
lib/cxx/include/sway/ui/area/: _typedefs.hpp  area.hpp  areaholder.hpp  areaholder.inl  areatypes.hpp
lib/cxx/include/sway/ui/area/specs/: boxarea.hpp  contentarea.hpp
lib/cxx/include/sway/ui/controls/button/: _typedefs.hpp  button.hpp
lib/cxx/include/sway/ui/controls/button/specs/: radiobutton.hpp  radiobuttongroup.hpp  radiobuttongroupchangeeventdata.hpp  togglebutton.hpp
lib/cxx/include/sway/ui/controls/textview/: _typedefs.hpp  textview.hpp
lib/cxx/include/sway/ui/element/: _typedefs.hpp  element.hpp  elementoffset.hpp  elementpositions.hpp  elementunderpointerinfo.hpp  nodechainextension.hpp  nodeextension.hpp  nodeindexextension.hpp  nodeutil.hpp
lib/cxx/include/sway/ui/element/event/: _typedefs.hpp
lib/cxx/include/sway/ui/element/event/specs/: buttonevent.hpp  dataevent.hpp  inputevent.hpp  keyevent.hpp  mouseevent.hpp
lib/cxx/include/sway/ui/ft2/: errorconvertor.hpp  errormacros.hpp  face.hpp  faceloader.hpp  font.hpp  fontmanager.hpp  fontshader.hpp  glyph.hpp
lib/cxx/include/sway/ui/layout/: _typedefs.hpp  layout.hpp  layoutitem.hpp  layoutitemtypes.hpp
lib/cxx/include/sway/ui/layout/specs/: linearlayout.hpp
lib/cxx/include/sway/ui/transform/: dimension.hpp  dimensiontypes.hpp  dimensionunits.hpp  positionpolicytypes.hpp  sizepolicy.hpp  sizepolicytypes.hpp
lib/cxx/include/sway/ui/widget/: _typedefs.hpp  appearance.hpp  area.hpp  areatypes.hpp  button.hpp  caret.hpp  caretselectionrange.hpp  element.hpp  elementareaholder.hpp  elementareaholder.inl  elementbox.hpp  elementboxarea.hpp  elementboxareatypes.hpp  elementoffset.hpp  elementpositions.hpp  label.hpp  layout.hpp  layoutorientations.hpp  linearlayout.hpp  linearlayoutorientations.hpp  progressbar.hpp  radiobutton.hpp  radiobuttongroup.hpp  sizepolicy.hpp  sizepolicytypes.hpp  togglebutton.hpp  typedefs.hpp  types.hpp  widget.hpp  widgetevent.hpp  widgeteventtypes.hpp
lib/cxx/include/sway/ui/widget/areas/: boxarea.hpp  contentarea.hpp
lib/cxx/include/sway/ui/widget/composites/: _typedefs.hpp  backdrop.hpp  dialog.hpp  draggable.hpp  droptarget.hpp  item.hpp  menu.hpp  menucontrolscheme.hpp  menueventhandler.hpp  menuitem.hpp  overlay.hpp  overlayeventfilter.hpp  popup.hpp
lib/cxx/include/sway/ui/widget/layout/: layout.hpp  linearlayout.hpp
lib/cxx/include/sway/ui/widget/progress/: progressbar.hpp  progressmodes.hpp
lib/cxx/src/: builder.cpp  painter.cpp
lib/cxx/src/area/specs/: boxarea.cpp  contentarea.cpp
lib/cxx/src/controls/button/: button.cpp
lib/cxx/src/controls/button/specs/: radiobutton.cpp  radiobuttongroup.cpp  togglebutton.cpp
lib/cxx/src/element/: element.cpp  elementareaholder.cpp
lib/cxx/src/element/event/specs/: mouseevent.cpp
lib/cxx/src/ft2/: face.cpp  faceloader.cpp  font.cpp  fontmanager.cpp
lib/cxx/src/layout/: layout.cpp  layoutitem.cpp
lib/cxx/src/layout/specs/: linearlayout.cpp
lib/cxx/src/textview/: textview.cpp
lib/cxx/src/widget/: button.cpp  element.cpp  elementareaholder.cpp  label.cpp  layout.cpp  linearlayout.cpp  progressbar.cpp  radiobutton.cpp  radiobuttongroup.cpp  togglebutton.cpp  widget.cpp
lib/cxx/src/widget/areas/: boxarea.cpp  contentarea.cpp
lib/cxx/src/widget/composites/: backdrop.cpp  dialog.cpp  draggable.cpp  droptarget.cpp  menu.cpp  menueventhandler.cpp  menuitem.cpp  overlay.cpp  popup.cpp
lib/cxx/src/widget/layout/: layout.cpp  linearlayout.cpp
lib/cxx/src/widget/progress/: progressbar.cpp
lib/cxx/tests/: CMakeLists.txt  README.md  font.spec.cpp
lib/cxx/tests/google/: CMakeLists.txt  README.md  areaholder.spec.cpp  element.spec.cpp  elementareaholder.spec.cpp  elementbox.spec.cpp  font.spec.cpp  layout.spec.cpp
src/: builder.cpp  painter.cpp
